--- a/src/login.html
+++ b/src/login.html
@@ -5,13 +5,13 @@
       <form>
         <div class="form-group">
           <label for="exampleInputEmail1">Email Address</label>
-          <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email">
+          <input type="email" ng-model="ctrl.email" class="form-control" placeholder="Email">
         </div>
         <div class="form-group">
           <label for="exampleInputPassword1">Password</label>
-          <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+          <input type="password" ng-model="ctrl.password" class="form-control" placeholder="Password">
         </div>
-        <button type="submit" class="btn btn-default">Submit</button>
+        <button ng-click="ctrl.login()" class="btn btn-default">Submit</button>
       </form>
     </div>
   </div>
