--- a/src/login.html
+++ b/src/login.html
@@ -2,7 +2,7 @@
   <div class="panel panel-primary">
     <div class="panel-heading">Login</div>
     <div class="panel-body">
-      <form>
+      <form ng-submit="ctrl.login()">
         <div class="form-group">
           <label for="exampleInputEmail1">Email Address</label>
           <input type="email" ng-model="ctrl.email" class="form-control" placeholder="Email">
@@ -11,7 +11,7 @@
           <label for="exampleInputPassword1">Password</label>
           <input type="password" ng-model="ctrl.password" class="form-control" placeholder="Password">
         </div>
-        <button ng-click="ctrl.login()" class="btn btn-default">Submit</button>
+        <button class="btn btn-default">Submit</button>
       </form>
     </div>
   </div>
