--- a/src/messenger.html
+++ b/src/messenger.html
@@ -26,9 +26,9 @@
         <textarea class="form-control" rows="10"></textarea>
         <form>
           <div class="form-group">
-            <input type="text" class="form-control" placeholder="Text">
+            <input type="text" class="form-control" placeholder="Text" ng-model="ctrl.message">
           </div>
-          <button type="submit" class="btn btn-default">Submit</button>
+          <button type="submit" class="btn btn-default" ng-click="ctrl.sendMessage(ctrl.message)">Submit</button>
         </form>
       </div>
     </div>
