--- a/src/messenger.html
+++ b/src/messenger.html
@@ -23,11 +23,18 @@
           <span class="list-group-item-text">{{ctrl.currentUser.fullName}}</span>
         </div>
 
-        <textarea class="form-control" rows="10"></textarea>
-        <form>
-          <div class="form-group">
-            <input type="text" class="form-control" placeholder="Text" ng-model="ctrl.message">
+        <div class="form-group message-conversation">
+          <div class="list-group">
+            <div class="list-group-item user-list-group-item" ng-repeat="msg in ctrl.currentMessages">
+              <!-- <img src="{{user.avatarUrl}}" height="30" width="30"> -->
+              <span class="list-group-item-text">{{msg.text}}</span>
+              <br/>
+            </div>
           </div>
+        </div>
+
+        <form>
+          <textarea class="form-control" rows="1" ng-model="ctrl.message"></textarea>
           <button type="submit" class="btn btn-default" ng-click="ctrl.sendMessage(ctrl.message)">Submit</button>
         </form>
       </div>
