--- a/src/messenger.html
+++ b/src/messenger.html
@@ -33,10 +33,8 @@
           </div>
         </div>
 
-        <form>
-          <textarea class="form-control" rows="1" ng-model="ctrl.message"></textarea>
-          <button type="submit" class="btn btn-default" ng-click="ctrl.sendMessage(ctrl.message)">Submit</button>
-        </form>
+        <textarea class="form-control col-md-9" rows="1" ng-model="ctrl.message"></textarea>
+        <button type="submit" class="btn btn-primary col-md-1" ng-click="ctrl.sendMessage(ctrl.message)">Submit</button>
       </div>
     </div>
   </div>
