--- a/src/messenger.html
+++ b/src/messenger.html
@@ -26,8 +26,10 @@
         <div class="form-group message-conversation">
           <div class="list-group">
             <div class="list-group-item user-list-group-item" ng-repeat="msg in ctrl.currentMessages">
-              <!-- <img src="{{user.avatarUrl}}" height="30" width="30"> -->
-              <span class="list-group-item-text">{{msg.text}}</span>
+              <span class="list-group-item-text">
+                <img src="{{msg.sender.avatarUrl}}" height="30" width="30">
+                <span>{{msg.text}}</span>
+              </span>
               <br/>
             </div>
           </div>
