--- a/src/messenger.html
+++ b/src/messenger.html
@@ -10,7 +10,7 @@
         </span>
       </div>
       <div class="list-group">
-        <a class="list-group-item user-list-group-item" ng-repeat="user in ctrl.users | filter: ctrl.userFilter" ng-click="ctrl.selectUser(user)">
+        <a class="list-group-item user-list-group-item" ng-class="{active: ctrl.isActive(user)}" ng-repeat="user in ctrl.users | filter: ctrl.userFilter" ng-click="ctrl.selectUser(user)">
           <img src="{{user.avatarUrl}}" height="30" width="30">
           <span class="list-group-item-text">{{user.fullName}}</span>
         </a>
