--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html ng-app="myApp">
   <head>
     <meta charset="utf-8">
-    <title>My Angular Electron App</title>
+    <title>NewsCred Conversations</title>
     <base href="./">
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
